# deer-diary

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _commit_msg.txt  config.example.toml  config.local.example.toml  config.toml  deer-diary-packwiz-migration-plan.md  deploy-server.bat  prism-to-modrinth-sync-plan.md  publish-all.bat  publish-everything.bat  publish-packwiz.bat  publish-server.bat  publish.bat
Custom Mods/server/config/: afkstatus-server.toml  bfcrmod-common.toml  bstats.json  ftbessentials.snbt  trmt-common.toml
bootstrap/Deer Diary Bootstrap/: instance.cfg
docs/: CNAME
docs/packwiz/: index.toml  pack.toml
docs/packwiz-server/: index.toml  pack.toml
prism-to-modrinth-sync/: .gitattributes  .gitignore  .last-published-state-server.json  .last-published-state.json  CHANGELOG.md  config.example.toml  config.toml  prism_sync.cmd  pyproject.toml
prism-to-modrinth-sync/src/prism_sync/: changelog.py  cli.py  config.py  customs.py  deploy.py  hashing.py  instance.py  jar_meta.py  modrinth_lookup.py  mrpack.py  notify.py  packwiz.py  packwiz_emit.py  packwiz_settings.py  pwtoml.py  remote.py  server.py  sftp.py  state.py
shader-tuning/: .gitignore  build-pack.ps1
shader-tuning/claude-audit/: 2026-05-30-complementary-unbound-efficiency-design.md  2026-05-30-phase1-research-baseline-plan.md  shader-01-audit.md  shader-02-optimizations.md
shader-tuning/measurements/: diff.py  methodology.md
src/prism_sync/: cli.py  config.py  customs.py  diff.py  gitutil.py  instance.py  publish.py
wrapper/: README.md  approve-update.sh  start.sh
(+462 files in other folders)
